# ToriYomi

./: .gitignore  BUILD.md  CMakeLists.txt  QUICKSTART.md  README.md  TODO.md  build.ps1
.github/instructions/: cpp-instructions.md  gitmoji.instructions.md
configs/: paddle_ocr.example.json  paddle_ocr.json
docs/: code-style.md  legacy-app-reference.md  ocr-engine-design.md  spec.md  verification_phase1-1.md
scripts/: install_paddleocr.ps1  install_vcpkg_dependencies.ps1
src/common/windows/: window_visibility.h
src/core/capture/: capture_thread.cpp  capture_thread.h  dxgi_capture.cpp  dxgi_capture.h  frame_queue.cpp  frame_queue.h  gdi_capture.cpp  gdi_capture.h
src/core/ocr/: ocr_engine.cpp  ocr_engine.h  ocr_engine_bootstrapper.cpp  ocr_engine_bootstrapper.h  ocr_thread.cpp  ocr_thread.h  paddle_ocr_wrapper.cpp  paddle_ocr_wrapper.h  tesseract_wrapper.cpp  tesseract_wrapper.h
src/core/ocr/paddle/: paddle_ocr_options.cpp  paddle_ocr_options.h
src/core/tokenizer/: furigana_mapper.cpp  furigana_mapper.h  japanese_tokenizer.cpp  japanese_tokenizer.h
src/qml/ToriYomiApp/: ToriYomiApp.qmlproject  ToriYomiApp.qmlproject.qtds  ToriYomiApp.qrc
src/qml/ToriYomiApp/ToriYomiApp/: Constants.qml  qmldir
src/qml/ToriYomiApp/ToriYomiApp/designer/: plugin.metainfo
src/qml/ToriYomiApp/ToriYomiAppContent/: App.qml  DebugLogWindow.qml  RegionSelector.qml  Screen01.qml  Screen01Form.ui.qml
src/ui/app/: app.ui  draggable_image_label.cpp  draggable_image_label.h  interactive_sentence_widget.cpp  interactive_sentence_widget.h  main.cpp  main_app.cpp  main_app.h  roi_overlay_widget.cpp  roi_overlay_widget.h  roi_selector_dialog.cpp  roi_selector_dialog.h
src/ui/overlay/: overlay_thread.cpp  overlay_thread.h  overlay_window.cpp  overlay_window.h
src/ui/qml_app/: main.cpp
src/ui/qml_backend/: app_backend.cpp  app_backend.h  process_enumerator.cpp  process_enumerator.h  sentence_assembler.cpp  sentence_assembler.h
tests/data/ocr_samples/: ui_screenshot_base64.txt
tests/integration/: test_paddle_ocr_integration.cpp
tests/unit/: test_capture_thread.cpp  test_dxgi_capture.cpp  test_frame_queue.cpp  test_furigana_mapper.cpp  test_gdi_capture.cpp  test_japanese_tokenizer.cpp  test_ocr_engine_bootstrapper.cpp  test_ocr_thread.cpp  test_overlay_thread.cpp  test_overlay_window.cpp  test_paddle_ocr_wrapper.cpp  test_tesseract_wrapper.cpp
